2014-03-17  Filip Pizlo  <fpizlo@apple.com>

        More FTL enabling.

        Rubber stamped by Dan Bernstein.

        * Tools/Scripts/build-webkit:

2014-03-17  Simon Fraser  <simon.fraser@apple.com>

        Renable pagination mode in WK2 MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=130374

        Reviewed by Anders Carlsson.
        
        Put the implementation of togglePaginationMode: back, and correctly
        enable the menu item.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController validateMenuItem:]):
        (-[WK2BrowserWindowController isPaginated]):
        (-[WK2BrowserWindowController togglePaginationMode:]):

2014-03-18  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        Add --reset option to Tools/Scripts/set-webkit-configuration script
        https://bugs.webkit.org/show_bug.cgi?id=130401

        Reviewed by Csaba Osztrogonác.

        * Scripts/set-webkit-configuration:

2014-03-18  Alberto Garcia  <berto@igalia.com>

        [GTK] [CMake] build-webkit-options.txt is not generated during a fresh build
        https://bugs.webkit.org/show_bug.cgi?id=130388

        Reviewed by Sergio Villar Senin.

        * Scripts/webkitdirs.pm:
        (shouldRemoveCMakeCache): make sure that the build directory
        exists before attempting to create a file in it.

2014-03-18  Robert Plociennik  <r.plociennik@samsung.com>

        [EFL] fontconfig-2.8.0 is not compliant with C++11 leading to a build break
        https://bugs.webkit.org/show_bug.cgi?id=130336

        Reviewed by Gyuyoung Kim.

        Compilation with gcc 4.8.x results in 'invalid suffix on literal; C++11
        requires a space between literal and string macro [-Wliteral-suffix]'
        warning treated as error.

        This patch applies a solution from r162448 to the EFL port.

        * efl/patches/fontconfig-C-11-requires-a-space-between-literal-and-identifier.patch: Added.