@@ -406,8 +406,8 @@ class ChangeLog(object):
         latest_entry_contents = latest_entry.contents()
         reviewer_text = latest_entry.reviewer()
         found_nobody = re.search("NOBODY\s*\(OOPS!\)", latest_entry_contents, re.MULTILINE)
-
-        if not found_nobody and not reviewer_text:
+        found_reviewer_or_unreviewed = latest_entry.has_valid_reviewer()
+        if not found_nobody and not found_reviewer_or_unreviewed and not reviewer_text:
             bug_url_number_of_items = len(re.findall(config_urls.bug_url_long, latest_entry_contents, re.MULTILINE))
             bug_url_number_of_items += len(re.findall(config_urls.bug_url_short, latest_entry_contents, re.MULTILINE))
             result = StringIO()
